Fix margins and overflow

--- a/components/PageTemplate/PageTemplate.module.css
+++ b/components/PageTemplate/PageTemplate.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   max-width: 1000px;
   margin: 40px auto;
-  overflow: hidden;
 }
 
 .innerContainer {
