--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body {
   background-color: white !important;
   max-width: 1600px !important;
   position: relative !important;
+  overflow-x: hidden;
 }
 
 
