--- a/scenes/About/About.module.css
+++ b/scenes/About/About.module.css
@@ -4,6 +4,7 @@
   max-width: 633px;
   margin: auto;
   line-height: 28px;
+  margin-bottom: 100px;
 }
 .narrowSection p {
   margin-top: 20px;
